--- a/index.html
+++ b/index.html
@@ -134,20 +134,23 @@
 
   <div class="container">
     <div class="profile-pic">
-      <img src="headshot.jpeg" alt="David Driver">
+      <img src="channel-pictures/headshot.jpeg" alt="David Driver">
     </div>
     <h1>David Driver</h1>
-    <p>Welcome to my personal website. Learn more about me on LinkedIn.</p>
+    <p>Hey there! Welcome to my site. I hope you enjoy looking around and find everything easy to navigate. If you have comments or suggestions, feel free to reach out!</p>
     <div id="about" class="about">
-      <h2>About</h2>
+      <h2>About Me</h2>
       <p>
-        I’m an experienced developer moving my focus from mainframe environments to modern internet and web technologies. These days, I enjoy exploring front-end and back-end development, creating user-friendly web applications, and diving into new frameworks and tools. 
+        I've had the chance to work with some pretty great companies over the years. From Technicolor, where I worked with film processing, to Columbia Pictures, Entertainment Partners, and Central Casting, I've worn many hats in the entertainment industry. Whether it was participations, location accounting, casting, or consulting, I learned a lot and met some fantastic people.
       </p>
       <p>
-        Outside of tech, I’ve got a range of interests, from photography and music to experimenting in the kitchen. Feel free to check out the navigation bar above to find out more about my consulting services, recipes, and creative projects.
+        Later, I dove into tech, supporting the travel industry at Princess Cruises. As an XML/API technical administrator, I helped manage the POLAR reservations system, ensuring it ran smoothly for thousands of websites and third-party vendors like Expedia, Travelocity, and AAA.
       </p>
       <p>
-        Whether you’re here to connect professionally or just curious about my work, welcome! Let’s create something great.
+        These days, I’m focused on Linux systems, AI, and automation with Python. I'm particularly interested in web-based technologies and rapid deployment solutions using platforms like GitHub, AWS, and Azure.
+      </p>
+      <p>
+        When I'm not working on tech projects, you might find me exploring my other passions: photography, music, cooking, and more. Check out the navigation bar above to learn more about my consulting services, recipes, creative projects, and more.
       </p>
     </div>
     <a href="https://www.linkedin.com/in/david-driver-6ab8015/" target="_blank">Visit My LinkedIn Profile</a>
